--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>Sonia Wadhwani</title>
 </head>
 <body>
-Sonia Wadhwani , my first page via Github
+Sonia Wadhwani , my first change submitted via Github
 </body>
 </html>
