--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Sonia Wadhwani</title>
 </head>
 <body>
-Sonia Wadhwani , my first change submitted via Github
+Sonia Wadhwani <br>
+Hello World!
 </body>
 </html>
