--- a/index.html
+++ b/index.html
@@ -1,10 +1,63 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Sonia Wadhwani</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sonia Wadhwani</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js"></script>
 </head>
 <body>
-Sonia Wadhwani <br>
-Hello World!
+    <header>
+        <nav>
+            <a href="index.html">Sonia Wadhwani</a>
+            <ul>
+                <li class="dropdown">
+                    <a href="#">About Me</a>
+                    <ul class="dropdown-content">
+                        <li><a href="personalprofile.html">Personal Profile</a></li>
+                        <li><a href="academics.html">Academics</a></li>
+                        <li><a href="achievements.html">Achievements</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#">My Art</a>
+                    <ul class="dropdown-content">
+                        <li><a href="mysketches.html">My Sketches</a></li>
+                        <li><a href="mydesigns.html">My Designs</a></li>
+                    </ul>
+                </li>
+                <li class="dropdown">
+                    <a href="#">My Projects</a>
+                    <ul class="dropdown-content">
+                        <li><a href="academicprojects.html">Academic Projects</a></li>
+                        <li><a href="otherprojects.html">Other Projects</a></li>
+                    </ul>
+                </li>
+                <li><a href="contactme.html">Contact Me</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="left-section">
+            <h2>About Me</h2>
+            <p>Some text Some text Some text Some text Some text Some text Some text Some text Some text</p>
+        </section>
+        <section class="right-section">
+            <div class="image-slider">
+                <img src="image1.jpg" alt="Image 1">
+                <img src="image2.jpg" alt="Image 2">
+                <img src="image3.jpg" alt="Image 3">
+                <img src="image4.jpg" alt="Image 4">
+                <img src="image5.jpg" alt="Image 5">
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <a href="index.html">Home</a>
+        <a href="contactme.html">Contact Me</a>
+    </footer>
 </body>
 </html>
