--- a/index.html
+++ b/index.html
@@ -4,37 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sonia Wadhwani</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        header {
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+
+        nav ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        nav li {
+            display: inline-block;
+            margin-right: 20px;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
+        }
+
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        main {
+            display: flex;
+        }
+
+        .left-section {
+            flex: 1;
+            padding: 20px;
+        }
+
+        .right-section {
+            flex: 1;
+            text-align: center;
+        }
+
+        .image-slider {
+            width: 80%;
+            margin: 0 auto;
+        }
+
+        .image-slider img {
+            width: 100%;
+            height: auto;
+            display: none;
+        }
+    </style>
 </head>
 <body>
     <header>
         <nav>
-            <a href="index.html">Sonia Wadhwani</a>
+            <a href="#">Sonia Wadhwani</a>
             <ul>
                 <li class="dropdown">
                     <a href="#">About Me</a>
                     <ul class="dropdown-content">
-                        <li><a href="personalprofile.html">Personal Profile</a></li>
-                        <li><a href="academics.html">Academics</a></li>
-                        <li><a href="achievements.html">Achievements</a></li>
+                        <li><a href="#">Personal Profile</a></li>
+                        <li><a href="#">Academics</a></li>
+                        <li><a href="#">Achievements</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#">My Art</a>
                     <ul class="dropdown-content">
-                        <li><a href="mysketches.html">My Sketches</a></li>
-                        <li><a href="mydesigns.html">My Designs</a></li>
+                        <li><a href="#">My Sketches</a></li>
+                        <li><a href="#">My Designs</a></li>
                     </ul>
                 </li>
                 <li class="dropdown">
                     <a href="#">My Projects</a>
                     <ul class="dropdown-content">
-                        <li><a href="academicprojects.html">Academic Projects</a></li>
-                        <li><a href="otherprojects.html">Other Projects</a></li>
+                        <li><a href="#">Academic Projects</a></li>
+                        <li><a href="#">Other Projects</a></li>
                     </ul>
                 </li>
-                <li><a href="contactme.html">Contact Me</a></li>
+                <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
     </header>
@@ -56,8 +127,27 @@
     </main>
 
     <footer>
-        <a href="index.html">Home</a>
-        <a href="contactme.html">Contact Me</a>
+        <a href="#">Home</a>
+        <a href="#">Contact Me</a>
     </footer>
+
+    <script>
+        // Image slider script
+        const images = document.querySelectorAll('.image-slider img');
+        let currentIndex = 0;
+
+        function showImage(index) {
+            images.forEach((image, i) => {
+                image.style.display = i === index ? 'block' : 'none';
+            });
+        }
+
+        showImage(currentIndex);
+
+        setInterval(() => {
+            currentIndex = (currentIndex + 1) % images.length;
+            showImage(currentIndex);
+        }, 3000);
+    </script>
 </body>
 </html>
