--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         header {
             display: flex;
+            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             background-color: #f2f2f2;
@@ -20,23 +21,20 @@
         }
 
         header a img {
-            width: 150px; /* Adjust the width as needed */
+            width: 120px;
         }
 
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
+            display: flex;
+            flex-wrap: wrap;
         }
 
         nav li {
             display: inline-block;
-            margin-right: 20px;
-        }
-
-        .dropdown {
-            position: relative;
-            display: inline-block;
+            margin: 5px 10px;
         }
 
         .dropdown-content {
@@ -48,33 +46,23 @@
             z-index: 1;
         }
 
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-        }
-
         .dropdown:hover .dropdown-content {
             display: block;
         }
 
         main {
             display: flex;
-        }
-
-        .left-section {
-            flex: 1;
+            flex-wrap: wrap;
             padding: 20px;
         }
 
-        .right-section {
-            flex: 1;
-            text-align: center;
+        .left-section, .right-section {
+            flex: 1 1 100%;
+            padding: 10px;
         }
 
         .image-slider {
-            width: 80%;
+            max-width: 90%;
             margin: 0 auto;
         }
 
@@ -88,6 +76,21 @@
             text-align: center;
             padding: 20px;
             background-color: #f2f2f2;
+        }
+
+        /* Responsive Layout */
+        @media (min-width: 600px) {
+            header a img {
+                width: 150px;
+            }
+
+            nav ul {
+                flex-wrap: nowrap;
+            }
+
+            .left-section, .right-section {
+                flex: 1 1 45%;
+            }
         }
     </style>
 </head>
@@ -132,11 +135,11 @@
         </section>
         <section class="right-section">
             <div class="image-slider">
-                <img src="image1.jpg" alt="Image 1">
-                <img src="image2.jpg" alt="Image 2">
-                <img src="image3.jpg" alt="Image 3">
-                <img src="image4.jpg" alt="Image 4">
-                <img src="image5.jpg" alt="Image 5">
+                <img src="images/image1.jpg" alt="Image 1">
+                <img src="images/image2.jpg" alt="Image 2">
+                <img src="images/image3.jpg" alt="Image 3">
+                <img src="images/image4.jpg" alt="Image 4">
+                <img src="images/image5.jpg" alt="Image 5">
             </div>
         </section>
     </main>
