--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 <body>
     <header>
         <a href="#">
-            <img src="logo.png" alt="Sonia Wadhwani Logo">
+            <img src="images/logo.png" alt="Sonia Wadhwani Logo">
         </a>
         <nav>
             <ul>
