Additional version of the home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 
         header {
             display: flex;
-            flex-wrap: wrap;
             justify-content: space-between;
             align-items: center;
             background-color: #f2f2f2;
@@ -21,20 +20,23 @@
         }
 
         header a img {
-            width: 120px;
+            width: 150px; /* Adjust the width as needed */
         }
 
         nav ul {
             list-style-type: none;
             margin: 0;
             padding: 0;
-            display: flex;
-            flex-wrap: wrap;
         }
 
         nav li {
             display: inline-block;
-            margin: 5px 10px;
+            margin-right: 20px;
+        }
+
+        .dropdown {
+            position: relative;
+            display: inline-block;
         }
 
         .dropdown-content {
@@ -46,23 +48,34 @@
             z-index: 1;
         }
 
+        .dropdown-content a {
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+        }
+
         .dropdown:hover .dropdown-content {
             display: block;
         }
 
         main {
             display: flex;
-            flex-wrap: wrap;
-            padding: 20px;
+            flex-wrap: wrap; /* Allow wrapping on smaller screens */
         }
 
         .left-section, .right-section {
-            flex: 1 1 100%;
-            padding: 10px;
+            flex: 1;
+            padding: 20px;
+            box-sizing: border-box; /* Include padding in the width */
+        }
+
+        .right-section {
+            text-align: center;
         }
 
         .image-slider {
-            max-width: 90%;
+            width: 80%;
             margin: 0 auto;
         }
 
@@ -78,18 +91,15 @@
             background-color: #f2f2f2;
         }
 
-        /* Responsive Layout */
-        @media (min-width: 600px) {
-            header a img {
-                width: 150px;
+        /* Responsive styles */
+        @media (max-width: 768px) {
+            nav li {
+                display: block; /* Stack nav items vertically */
+                margin-right: 0;
+                margin-bottom: 10px;
             }
-
-            nav ul {
-                flex-wrap: nowrap;
-            }
-
             .left-section, .right-section {
-                flex: 1 1 45%;
+                flex: 100%; /* Make sections full width on small screens */
             }
         }
     </style>
