--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             line-height: 1.2;
             white-space: nowrap;
             overflow: hidden;
-            border-right: 0.15em solid #000;
+            border-right: 0.15em solid #fff;
             animation: typing 3s steps(30, end), blink-caret 0.75s step-end 3s;
         }
 
@@ -99,7 +99,7 @@
         /* Blinking caret animation, stops after typing completes */
         @keyframes blink-caret {
             from, to { border-color: transparent; }
-            50% { border-color: black; }
+            50% { border-color: white; }
         }
 
         .right-section {
