--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 <body>
     <header>
         <a href="#">
-            <img src="logo.png" alt="Sonia Wadhwani Logo">
+            <img src="images/logo.png" alt="Sonia Wadhwani Logo">
         </a>
         <nav>
             <ul>
@@ -176,11 +176,11 @@
         </section>
         <section class="right-section">
             <div class="image-slider">
-                <img src="image1.jpg" alt="Image 1">
-                <img src="image2.jpg" alt="Image 2">
-                <img src="image3.jpg" alt="Image 3">
-                <img src="image4.jpg" alt="Image 4">
-                <img src="image5.jpg" alt="Image 5">
+                <img src="images/image1.jpg" alt="Image 1">
+                <img src="images/image2.jpg" alt="Image 2">
+                <img src="images/image3.jpg" alt="Image 3">
+                <img src="images/image4.jpg" alt="Image 4">
+                <img src="images/image5.jpg" alt="Image 5">
             </div>
         </section>
     </main>
