Added new version of the website

--- a/v2/index.html
+++ b/v2/index.html
@@ -13,12 +13,11 @@
 
     <main>
         <div class="grid-container">
-          <section class="left-section">
-            <div class="dynamic-text">
-                <p>Hi,</p>
-                <p>I am Sonia.</p>
+            <div class="grid-item text-item">
+                <div class="dynamic-text"> 
+                  <p>Hi,</p>
+                   <p>I am Sonia.</p></div>
             </div>
-           </section>
             <div class="grid-item image-item">
                 <img src="images/image2.jpg" alt="About Me">
                 <p class="overlay">About Me</p>
