copied main to V3

--- a/index.html
+++ b/index.html
@@ -89,6 +89,10 @@
             width: 100%;
             height: auto;
         }
+
+        .paint-brush-cursor {
+            cursor: url('images/paintbrush-cursor.cur'), auto;
+         }
     </style>
     <script>
         function typeWriter(text, element) {
