--- a/v2/index.html
+++ b/v2/index.html
@@ -14,9 +14,9 @@
     <main>
         <div class="grid-container">
             <div class="grid-item text-item">
-                <div class="dynamic-text"> 
-                  <p>Hi,</p>
-                   <p>I am Sonia.</p></div>
+                <div class="dynamic-text"> <h1>
+                  Hi, 
+                    I am Sonia.</h1></div>
             </div>
             <div class="grid-item image-item">
                 <img src="images/image2.jpg" alt="About Me">
