--- a/index.html
+++ b/index.html
@@ -39,12 +39,13 @@
         }
 
         .left-section {
-            flex: 0 0 40%;
+            flex: 0 0 50%;
             padding: 20px;
+            padding-left: 40px; /* Increased left padding */
         }
 
         .right-section {
-            flex: 0 0 60%;
+            flex: 0 0 50%;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -58,7 +59,7 @@
         }
 
         .right-section img {
-            max-width: 100%;
+            max-width: 80%;
             max-height: 80vh;
             object-fit: cover;
             border-top-left-radius: 50%;
@@ -67,8 +68,8 @@
 
         footer {
             background-color: #F5F5F5;
-            padding: 20px;
             text-align: center;
+            margin-top: auto; /* Ensures footer stays at the bottom */
         }
 
         footer a {
@@ -91,20 +92,16 @@
 
     <main>
         <section class="left-section">
-            <p class="large-text">Hi,<br>I am Sonia.</p>
+            <p class="large-text">Hello,<br>I am Sonia.</p>
             <p>I am a compassionate, creative design enthusiast, blending artistry with user-focused innovation. I value diverse experiences, from supporting the underprivileged to exploring cultures, driven by positivity and a love for discovery.</p>
         </section>
         <section class="right-section">
-            <img src="images/sonia.jpg" alt="Sonia Wadhwani">
+            <img src="images/sonia.png" alt="Sonia Wadhwani">
         </section>
     </main>
 
     <footer>
-        <a href="index.html">Home</a>
-        <a href="aboutme.html">About Me</a>
-        <a href="myart.html">My Art</a>
-        <a href="projects.html">Projects</a>
-        <a href="contactme.html">Contact Me</a>
+        <p>&copy; Sonia Wadhwani 2023</p>
     </footer>
 </body>
 </html>
