--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
         }
 
         .logo {
-            width: 200px;
+            width: 120px;
             height: 60px;
+            padding-left: 30px; 
+
         }
 
         main {
